manifests/influxdb/influx-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: influxdb
  name: influxdb-np
  namespace: influxdb
spec:
  ports:
  - name: 8086-8086
    port: 8086
    protocol: TCP
    targetPort: 8086
  selector:
    app: influxdb
  type: NodePort
